# tiny-lsp-client

./: .gitignore  Cargo.toml  README.org  interactive_test.sh  lisp_bindings_test.sh  non_interactive_test.sh  test.sh  tiny-lsp-client-interactive-test.el  tiny-lsp-client-lisp-bindings-test.el  tiny-lsp-client-non-interactive-test.el  tiny-lsp-client-test.el  tiny-lsp-client.el
data/: lsp-mode-example-log.txt
src/: build.rs  connection.rs  connections.rs  dummy.rs  emacs.rs  learning_tests.rs  lib.rs  logger.rs  main.rs  message.rs  server.rs  servers.rs  tests.rs
src/connection/: tests.rs
src/logger/: tests.rs
src/message/: tests.rs
src/server/: tests.rs
test/: Dockerfile  cargo-test-test.el  clangd-test.el  common.el  docker-compose.yaml  erlang-ls-test.el  haskell-language-server-test.el  interactive-test.el  interactive.el  interactive.sh  jdtls-test.el  lisp-bindings-test.el  mode-test.el  new-common.el  new-mode-test.el  new-test.el  performance-test.el  run_tests.sh  rust-analyzer-test.el  tiny-lsp-client-lisp-bindings-test.el
test/clangd/: .gitignore  CMakeLists.txt  completion.cpp  erlang_in_cpp.erl  main.cpp  my_module.erl  other.cpp  other.hpp  special++åäöあ本.cpp  special++åäöあ本.hpp
test/erlang_ls/: my_module.erl
test/haskell_language_server/: CHANGELOG.md  haskell-language-server-test.cabal
test/haskell_language_server/app/: Main.hs
test/jdtls/my-app/src/main/java/com/mycompany/app/: App.java
test/logs/: .gitignore
test/rust_analyzer/: Cargo.toml
test/rust_analyzer/src/: main.rs
