[package]
name = "tiny-lsp-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
build = "src/build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
bindgen = "0.71.1"

[dev-dependencies]
regex = "1.11.1"